--- a/packages/storybook-html/src/components/sections/sections.html
+++ b/packages/storybook-html/src/components/sections/sections.html
@@ -63,7 +63,7 @@
 </div>
 
 <div class="section section--centered section--image-behind section--light-text light-palette">
-  <div class="section__background"><img src="http://lorempixel.com/1920/1080" /></div>
+  <div class="section__background"><img src="/images/uq-image-01.jpeg" /></div>
 
   <div class="section__container">
     <div class="section__header">
@@ -80,7 +80,7 @@
   </div>
 </div>
 
-<div class="section section--centered section--background-image section--light-tint section--dark-text" style="background-image: url('//lorempixel.com/1920/600/abstract/3');">
+<div class="section section--centered section--background-image section--light-tint section--dark-text" style="background-image: url('/images/uq-image-01.jpeg');">
   <div class="section__container">
     <div class="section__header">
       <h2 class="section__title">Section title</h2>
@@ -96,7 +96,7 @@
   </div>
 </div>
 
-<div class="section section--centered section--dark-tint section--light-text light-palette" style="background-image: url('//lorempixel.com/1920/600/abstract/3');">
+<div class="section section--centered section--dark-tint section--light-text light-palette" style="background-image: url('/images/uq-image-01.jpeg');">
   <div class="section__container">
     <div class="section__header">
       <h2 class="section__title">Section title</h2>
