--- a/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
@@ -73,7 +73,7 @@
     position: relative;
     margin: 0;
 
-    &:before {
+    &::before {
       display: block;
       font-weight: normal;
       margin-bottom: .4rem;
@@ -88,7 +88,7 @@
   }
 
   &-suggestions {
-    &:before {
+    &::before {
       content: "Suggestions to strengthen your password:";
     }
   }
@@ -98,7 +98,7 @@
     margin-bottom: 1rem;
     margin-top: -1px;
 
-    &:before {
+    &::before {
       content: "These issues are weakening your password:";
     }
 
