--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -13,7 +13,7 @@
   margin: core.$space-none;
   padding: core.$space-none;
 
-  *, *:before, *:after {
+  *, *::before, *::after {
     box-sizing: border-box;
   }
   
@@ -23,7 +23,7 @@
     float: left;
     margin: core.$space-none;
 
-    &:before {
+    &::before {
       content: '';
       padding: 0.65rem 0.75rem;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-5 -6 24 24' %3E%3Cpath d='M5.145 14.285l6.167-6a.41.41 0 000-.598L5.145 1.715' fill='none' stroke='%23565452' stroke-width='1' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
@@ -32,7 +32,7 @@
     }
 
     &:first-child {
-      &:before {
+      &::before {
         content: '';
         display: none;
       }
