--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -20,7 +20,7 @@
   text-decoration: none;
   transition: all 300ms ease-out;
   
-  *, *:before, *:after {
+  *, *::before, *::after {
     box-sizing: border-box;
   }
 
