--- a/packages/sections/src/scss/_component.scss
+++ b/packages/sections/src/scss/_component.scss
@@ -158,8 +158,8 @@
     @include grid.layout-containment;
 
     // clearfix from Foundation 5
-    &:before, &:after { content: " "; display: table; }
-    &:after { clear: both; }
+    &::before, &::after { content: " "; display: table; }
+    &::after { clear: both; }
   }
 
   &__header,
