namespacing with 'core' instead of * in components

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -1,4 +1,4 @@
-@use '@uqds/core/src/scss/global' as *;
+@use '@uqds/core/src/scss/global' as core;
 @use 'global' as *;
 
 /* button Default */
@@ -14,7 +14,7 @@
   font-size: 1rem;
   font-weight: normal;
   line-height: normal;
-  padding: $space-sm $space-md;
+  padding: core.$space-sm core.$space-md;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -164,22 +164,22 @@
   /* button sizes */
   &--tiny {
     font-size: 12px;
-    padding: $space-xs $space-sm;
+    padding: core.$space-xs core.$space-sm;
   }
 
   &--small {
     font-size: 14px;
-    padding: $space-sm $space;
+    padding: core.$space-sm core.$space;
   }
 
   &--large {
     font-size: 18px;
-    padding: $space $space-xl;
+    padding: core.$space core.$space-xl;
   }
 
   &--expand {
-    padding-left: $space-none;
-    padding-right: $space-none;
+    padding-left: core.$space-none;
+    padding-right: core.$space-none;
     width: 100%;
   }
 }
