--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -1,26 +1,26 @@
 // Variables, functions, and mixins
 
-@use '@uqds/core/src/scss/global' as *;
+@use '@uqds/core/src/scss/global' as core;
 
-$button-font: $roboto !default;
+$button-font: core.$roboto !default;
 
-$button-color: $uq-white !default;
-$button-hover-color: $uq-white !default;
-$button-bg-color: $link !default;
-$button-bg-hover-color: $link-active !default;
-$button-border-color: $link !default;
-$button-border-hover-color: $link-active !default;
+$button-color: core.$uq-white !default;
+$button-hover-color: core.$uq-white !default;
+$button-bg-color: core.$link !default;
+$button-bg-hover-color: core.$link-active !default;
+$button-border-color: core.$link !default;
+$button-border-hover-color: core.$link-active !default;
 
-$button-secondary-color: $uq-neutral-dark80 !default; //2b2b2b;
-$button-secondary-hover-color: $uq-black !default;
-$button-secondary-bg-color: $uq-neutral !default; //d7d1cc;
-$button-secondary-bg-hover-color: $uq-neutral-dark20 !default; //bdb0a5;
-$button-secondary-border-color: $uq-neutral !default; //d7d1cc;
-$button-secondary-border-hover-color: $uq-neutral-dark20 !default; //bdb0a5;
+$button-secondary-color: core.$uq-neutral-dark80 !default; //2b2b2b;
+$button-secondary-hover-color: core.$uq-black !default;
+$button-secondary-bg-color: core.$uq-neutral !default; //d7d1cc;
+$button-secondary-bg-hover-color: core.$uq-neutral-dark20 !default; //bdb0a5;
+$button-secondary-border-color: core.$uq-neutral !default; //d7d1cc;
+$button-secondary-border-hover-color: core.$uq-neutral-dark20 !default; //bdb0a5;
 
-$button-purple-color: $uq-white !default;
-$button-purple-hover-color: $uq-white !default;
-$button-purple-bg-color: $uq-purple !default;
-$button-purple-bg-hover-color: $uq-purple-dark !default;
-$button-purple-border-color: $uq-purple !default;
-$button-purple-border-hover-color: $uq-purple-dark !default;
+$button-purple-color: core.$uq-white !default;
+$button-purple-hover-color: core.$uq-white !default;
+$button-purple-bg-color: core.$uq-purple !default;
+$button-purple-bg-hover-color: core.$uq-purple-dark !default;
+$button-purple-border-color: core.$uq-purple !default;
+$button-purple-border-hover-color: core.$uq-purple-dark !default;
