icon: mixin-ise styles

--- a/packages/icon/src/scss/_component.scss
+++ b/packages/icon/src/scss/_component.scss
@@ -1,32 +1,4 @@
 @use '_build/icons-emit';
 @use 'global' as *;
 
-.uq-icon {
-  display: inline-block;
-  height: 1.5rem;
-  width: 1.5rem;
-  vertical-align: middle;
-
-  &::before {
-    content: '';
-    display: block;
-    filter: $icon-primary-filter;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-  }
-
-  &--light {
-    &::before {
-      filter: $icon-light-filter;
-    }
-  }
-
-  &--text {
-    &::before {
-      filter: $icon-light-filter;
-    }
-  }
-}
+@include icon-base;
