--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -5,13 +5,13 @@
 .uq-button {
   background-color: $button-bg-color;
   border: 2px solid $button-border-color;
-  border-radius: 5px;
+  border-radius: core.$space-xs;
   box-sizing: border-box;
   color: $button-color;
   cursor: pointer;
   display: inline-block;
   font-family: $button-font;
-  font-size: 1rem;
+  font-size: core.$space;
   font-weight: normal;
   line-height: normal;
   padding: core.$space-sm core.$space-md;
@@ -163,17 +163,17 @@
 
   /* button sizes */
   &--tiny {
-    font-size: 12px;
+    font-size: core.$font-size-xs;
     padding: core.$space-xs core.$space-sm;
   }
 
   &--small {
-    font-size: 14px;
+    font-size: core.$font-size-s;
     padding: core.$space-sm core.$space;
   }
 
   &--large {
-    font-size: 18px;
+    font-size: core.$font-size-l;
     padding: core.$space core.$space-xl;
   }
 
