storybook-html: reduce spacing in icon examples

--- a/packages/storybook-html/src/components/icon/icon.scss
+++ b/packages/storybook-html/src/components/icon/icon.scss
@@ -25,7 +25,7 @@
 
       &__label {
         border-top: 1px solid core.$uq-neutral;
-        padding-top: core.$space;
+        padding-top: core.$space-sm;
         color: core.$uq-neutral-dark40;
         line-height: 1;
       }
