icon: improve base styling for general use case
So I can eat our own dog food in the docs

--- a/packages/icon/src/scss/_global.scss
+++ b/packages/icon/src/scss/_global.scss
@@ -9,20 +9,17 @@ $icon-text-filter: core.$filter-text;
 
 @mixin icon-base() {
   .uq-icon {
-    display: inline-block;
-    height: 1.5rem;
-    width: 1.5rem;
-    vertical-align: middle;
-
     &::before {
       content: '';
-      display: block;
+      display: inline-block;
+      margin-right: .3em;
+      height: 1.5em;
+      width: 1.5em;
       filter: $icon-primary-filter;
-      width: 100%;
-      height: 100%;
       background-repeat: no-repeat;
       background-position: center;
       background-size: 100%;
+      vertical-align: text-bottom;
     }
 
     // Colour variants
