kitchen sink broken comps fixed

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -201,53 +201,55 @@
 </div>
 
 <!-- alert -->
-<div class="alert alert--default" role="alert">
-  <div class="alert__container">
-    <div class="alert__message">
+<div class="uq-alert uq-alert--default" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
       <b>I'm a default alert.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </div>
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--info" role="alert">
-  <div class="alert__container">
-    <div class="alert__message">
+<div class="uq-alert uq-alert--info" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
       <b>I come in a variety of styles and configurations.</b> See the <code>alerts</code> story for more examples.</a>
     </div>
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--success" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--success" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--success</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--warning" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--warning" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--warning</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--danger" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--danger" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--danger</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="hero hero--feature-image">  
-  <div class="hero__image">
-    <div class="hero__image--small">
+
+<!-- hero -->
+<div class="uq-hero uq-hero--feature-image">  
+  <div class="uq-hero__image">
+    <div class="uq-hero__image--small">
       <img src="/images/hero/hero_example--small.jpg" />
     </div>
-    <div class="hero__image--large">
+    <div class="uq-hero__image--large">
       <img src="/images/hero/hero_example--large.jpg" />
     </div>
   </div>
-  <div class="hero__content">
-    <div class="hero__text">
+  <div class="uq-hero__content">
+    <div class="uq-hero__text">
       <h1>Hero banner with feature image</h1>
-      <p class="hero__subtext">Banner sub text</p>
+      <p class="uq-hero__subtext">Banner sub text</p>
       <p><a class="uq-button" href="#">Call to action</a></p>
     </div>
   </div>
@@ -378,23 +380,23 @@
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
     <h2>Accessible accordions</h2>
-    <div class="accordion" aria-label="Accordion button group" role="presentation">
-      <div class="accordion__item">
-        <button class="accordion__toggle" aria-controls="content-1" aria-expanded="false" id="accordion-title-1">About the accordion UI pattern</button>
-        <div class="accordion__content" aria-hidden="true" id="content-1" aria-labelledby="accordion-title-1">
+    <div class="uq-accordion" aria-label="Accordion button group" role="presentation">
+      <div class="uq-accordion__item">
+        <button class="uq-accordion__toggle" aria-controls="content-1" aria-expanded="false" id="accordion-title-1">About the accordion UI pattern</button>
+        <div class="uq-accordion__content" aria-hidden="true" id="content-1" aria-labelledby="accordion-title-1">
           <p>Accordions are used to display expandable and collapsible content organised in logical sections.</p>
           <blockquote cite="https://www.smashingmagazine.com/2017/06/designing-perfect-accordion-checklist/">It’s an immensely useful pattern for progressive disclosure — highlighting important details of a section and revealing more details upon a tap or click, if necessary. As a result, the design stays focused and displays critical information first, while everything else is easily accessible. In fact, if you encounter a problem of any kind — too many navigation options, too much content, too detailed a view — a good starting point would be to explore how you could utilize the good ol’ accordion to solve that problem. <cite><a href="https://www.smashingmagazine.com/2017/06/designing-perfect-accordion-checklist/">Designing The Perfect Accordion</a>, Smashing Magazine</cite></blockquote>
         </div>
       </div>
-      <div class="accordion__item">
-        <button class="accordion__toggle" aria-controls="content-2" aria-expanded="false" id="accordion-title-2">Click me!</button>
-        <div class="accordion__content" role="region" aria-hidden="true" id="content-2" aria-labelledby="accordion-title-2">
+      <div class="uq-accordion__item">
+        <button class="uq-accordion__toggle" aria-controls="content-2" aria-expanded="false" id="accordion-title-2">Click me!</button>
+        <div class="uq-accordion__content" role="region" aria-hidden="true" id="content-2" aria-labelledby="accordion-title-2">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
         </div>
       </div>
-      <div class="accordion__item">
-        <button class="accordion__toggle" aria-controls="content-3" aria-expanded="false" id="accordion-title-3">And me!</button>
-        <div class="accordion__content" role="region" aria-hidden="true" id="content-3" aria-labelledby="accordion-title-3">
+      <div class="uq-accordion__item">
+        <button class="uq-accordion__toggle" aria-controls="content-3" aria-expanded="false" id="accordion-title-3">And me!</button>
+        <div class="uq-accordion__content" role="region" aria-hidden="true" id="content-3" aria-labelledby="accordion-title-3">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
           <p>Maecenas faucibus mollis interdum. Etiam porta sem malesuada magna mollis euismod. Maecenas sed diam eget risus varius blandit sit amet non magna. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui.</p>
           <p>Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
