Section prefix with -uq

--- a/packages/storybook-html/src/components/sections/sections.html
+++ b/packages/storybook-html/src/components/sections/sections.html
@@ -1,13 +1,13 @@
-<div class="section section--centered">
-  <div class="section__container">
-    <div class="section__header">
-      <h2 class="section__title">Section header title</h2>
+<div class="uq-section uq-section--centered">
+  <div class="uq-section__container">
+    <div class="uq-section__header">
+      <h2 class="uq-section__title">Section header title</h2>
 
-      <p class="section__summary">Section header summary. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+      <p class="uq-section__summary">Section header summary. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
         invidunt ut labore.</p>
     </div>
 
-    <div class="section__content">
+    <div class="uq-section__content">
       <p>section content. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
         clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
@@ -15,21 +15,21 @@
         diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
         takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="section__footer">section footer. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+    <div class="uq-section__footer">section footer. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
       invidunt ut labore.</div>
   </div>
 </div>
 
-<div class="section section--shaded section--centered">
-  <div class="section__container">
-    <div class="section__header">
-      <h2 class="section__title">Section title</h2>
+<div class="uq-section uq-section--shaded uq-section--centered">
+  <div class="uq-section__container">
+    <div class="uq-section__header">
+      <h2 class="uq-section__title">Section title</h2>
 
-      <p class="section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+      <p class="uq-section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
         invidunt ut labore.</p>
     </div>
 
-    <div class="section__content">
+    <div class="uq-section__content">
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
         clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
@@ -37,20 +37,20 @@
         diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
         takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="section__footer"></div>
+    <div class="uq-section__footer"></div>
   </div>
 </div>
 
-<div class="section section--horizontal">
-  <div class="section__container">
-    <div class="section__header">
-      <h2 class="section__title">Section title</h2>
+<div class="uq-section uq-section--horizontal">
+  <div class="uq-section__container">
+    <div class="uq-section__header">
+      <h2 class="uq-section__title">Section title</h2>
 
-      <p class="section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+      <p class="uq-section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
         invidunt ut labore.</p>
     </div>
 
-    <div class="section__content">
+    <div class="uq-section__content">
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
         clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
@@ -58,56 +58,56 @@
         diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
         takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="section__footer"></div>
+    <div class="uq-section__footer"></div>
   </div>
 </div>
 
-<div class="section section--centered section--image-behind section--light-text light-palette">
-  <div class="section__background"><img src="/images/uq-image-01.jpeg" /></div>
+<div class="uq-section uq-section--centered uq-section--image-behind uq-section--light-text light-palette">
+  <div class="uq-section__background"><img src="/images/uq-image-01.jpeg" /></div>
 
-  <div class="section__container">
-    <div class="section__header">
-      <h2 class="section__title">Section title</h2>
+  <div class="uq-section__container">
+    <div class="uq-section__header">
+      <h2 class="uq-section__title">Section title</h2>
 
-      <p class="section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
+      <p class="uq-section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
     </div>
 
-    <div class="section__content">
+    <div class="uq-section__content">
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="section__footer"></div>
+    <div class="uq-section__footer"></div>
   </div>
 </div>
 
-<div class="section section--centered section--background-image section--light-tint section--dark-text" style="background-image: url('/images/uq-image-01.jpeg');">
-  <div class="section__container">
-    <div class="section__header">
-      <h2 class="section__title">Section title</h2>
+<div class="uq-section uq-section--centered uq-section--background-image uq-section--light-tint uq-section--dark-text" style="background-image: url('/images/uq-image-01.jpeg');">
+  <div class="uq-section__container">
+    <div class="uq-section__header">
+      <h2 class="uq-section__title">Section title</h2>
 
-      <p class="section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
+      <p class="uq-section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
     </div>
 
-    <div class="section__content">
+    <div class="uq-section__content">
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="section__footer"></div>
+    <div class="uq-section__footer"></div>
   </div>
 </div>
 
-<div class="section section--centered section--dark-tint section--light-text light-palette" style="background-image: url('/images/uq-image-01.jpeg');">
-  <div class="section__container">
-    <div class="section__header">
-      <h2 class="section__title">Section title</h2>
+<div class="uq-section uq-section--centered uq-section--background-image uq-section--dark-tint uq-section--light-text light-palette" style="background-image: url('/images/uq-image-01.jpeg');">
+  <div class="uq-section__container">
+    <div class="uq-section__header">
+      <h2 class="uq-section__title">Section title</h2>
 
-      <p class="section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
+      <p class="uq-section__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
     </div>
 
-    <div class="section__content">
+    <div class="uq-section__content">
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="section__footer"></div>
+    <div class="uq-section__footer"></div>
   </div>
 </div>
