--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -11,7 +11,7 @@
   cursor: pointer;
   display: inline-block;
   font-family: $button-font;
-  font-size: core.$space;
+  font-size: core.$font-size-m;
   font-weight: normal;
   line-height: normal;
   padding: core.$space-sm core.$space-md;
