--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -70,6 +70,7 @@
       }
 
       .uq-grid-menu__link,
+      .uq-grid-menu__title,
       .uq-grid-menu__description {
         color: $linked-list-color-hover;
         text-decoration: none;
@@ -124,8 +125,9 @@
 // Palettes applied to section wrapping grid-menu.
 .light-palette {
   .uq-grid-menu {
-    .uq-grid-menu__link,
-    .uq-grid-menu__description {
+    &__link,
+    &__title,
+    &__description {
       @extend %light-palette;
 
       &:hover {
@@ -143,8 +145,9 @@
 
 .dark-palette {
   .uq-grid-menu {
-    .uq-grid-menu__link,
-    .uq-grid-menu__description {
+    &__link,
+    &__title,
+    &__description {
       @extend %dark-palette;
 
       &:hover {
@@ -163,7 +166,7 @@
 // Grid menu inside a section with background image.
 .section--background-image {
   .uq-grid-menu {
-    .uq-grid-menu__link {
+    &__link {
       border-color: rgba(core.$uq-white, .4);
     }
   }
